Make vector and raster selections to behave in the same way when creating tiny selections

1) Rectangle and Ellipse selection tools should do nothing when crating 0px-wide
    selections. They just do nothing, not "deselect" action. For deselect the user should
    actually to a click.

2) When creating subtract-mode selection on empty selection, Krita should first select
    the entire image, and then remove the selected portion. This behavior existed in Krita
    since at least 2010. This patch just makes vector mode to behave consistently with
    the pixel mode.

Note: bug 408369 is almost fixed. The only issue left is the intersection mode artifacts.

BUG:445935
CCBUG:408369